# Notify

./: .env  .gitignore  Cargo.toml  README.md  database.sqlite
migrations/: 20220915012057_database.sql
src/: commands.rs  database.rs  embeds.rs  handlers.rs  main.rs
src/cache (unfinished)/: cache.rs
src/cogs/: cache.rs  commands.rs  embeds.rs  functions.rs  handlers.rs
src/cogs/database/: notify.rs
src/database/: notify.rs
