[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
# sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread", "time"] }